# hydra

./: .clang-tidy  .gitignore  README.md  configure.ac  flake.nix  justfile  meson.build  package.nix
.github/workflows/: test.yml
doc/manual/: meson.build
doc/manual/src/: hacking.md
foreman/: start-evaluator.sh  start-hydra.sh  start-notify.sh  start-queue-runner.sh
nixos-modules/: hydra.nix
src/: meson.build
src/hydra-eval-jobs/: hydra-eval-jobs.cc
src/hydra-evaluator/: hydra-evaluator.cc  meson.build
src/hydra-queue-runner/: build-remote.cc  build-result.cc  builder.cc  dispatcher.cc  hydra-build-result.hh  hydra-queue-runner.cc  meson.build  nar-extractor.cc  nar-extractor.hh  queue-monitor.cc  state.hh
src/lib/Hydra/Controller/: API.pm  Build.pm  Root.pm
src/lib/Hydra/Helper/: Nix.pm
src/lib/Hydra/Plugin/: GiteaPulls.pm  GithubStatus.pm
src/libhydra/: db.hh  hydra-config.hh
src/root/: Makefile.am  build.tt
src/script/: hydra-eval-jobset
src/sql/: hydra.sql
t/: Makefile.am
t/Hydra/Controller/API/: checks.t
t/Hydra/Controller/Project/: delete.t
t/lib/: HydraTestContext.pm
